# fastapi-estudos

SQL_alchemy/: connection.py  pyproject.toml  run.py
SQL_alchemy/infra/configs/: base.py  connection.py
SQL_alchemy/infra/entities/: atores.py  filmes.py
SQL_alchemy/infra/repository/: atores_repository.py  filmes_repository.py
fast_zero/: .gitignore  database.db  pyproject.toml  testdb.py
fast_zero/fast_zero/: app.py  database.py  models.py  schemas.py  settings.py
fast_zero/migrations/: env.py
fast_zero/migrations/versions/: 2054135c6de4_create_users_table.py  5413db587840_create_users_table.py
fast_zero/tests/: conftest.py  test_app.py  test_db.py
